--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Quickstart"
+description: "Start building awesome documentation in under 5 minutes"
 ---
 
 ## Setup your development...
@@ -10,7 +10,7 @@ Learn how to update your docs locally and deploy them to the public.
 ### Edit and preview
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
+  <Accordion title="Clone your docs locally" icon="github">
     During the onboarding process, we created a repository on your Github with
     your docs content. You can find this repository on our
     [dashboard](https://dashboard.mintlify.com). To clone the repository
@@ -18,15 +18,13 @@ Learn how to update your docs locally and deploy them to the public.
     [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
     in your terminal.
   </Accordion>
-
-  <Accordion icon="rectangle-terminal" title="Preview changes">
+  <Accordion title="Preview changes" icon="rectangle-terminal">
     Previewing helps you make sure your changes look as intended. We built a
     command line interface to render these changes locally.
 
     1. Install the
        [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
        documentation changes locally with this command: `npm i -g mintlify`
-
     2. Run the following command at the root of your documentation (where
        `docs.json` is): `mintlify dev`
 
@@ -45,15 +43,14 @@ Learn how to update your docs locally and deploy them to the public.
 ### Deploy your changes
 
 <AccordionGroup>
-  <Accordion icon="message-bot" title="Install our Github app">
+  <Accordion title="Install our Github app" icon="message-bot">
     Our Github app automatically deploys your changes to your docs site, so you
     don't need to manage deployments yourself. You can find the link to install on
     your [dashboard](https://dashboard.mintlify.com). Once the bot has been
     successfully installed, there should be a check mark next to the commit hash
     of the repo.
   </Accordion>
-
-  <Accordion icon="rocket" title="Push your changes">
+  <Accordion title="Push your changes" icon="rocket">
     [Commit and push your changes to
     Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
     for your changes to update in your docs site. If you push and don't see that
@@ -66,19 +63,16 @@ Learn how to update your docs locally and deploy them to the public.
 
 Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
 
-<CardGroup>
+<CardGroup cols={2}>
   <Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
     Add content to your docs with MDX syntax.
   </Card>
-
   <Card title="Add Code Blocks" icon="square-code" href="/essentials/code">
     Add code directly to your docs with syntax highlighting.
   </Card>
-
   <Card title="Add Images" icon="image" href="/essentials/images">
     Add images to your docs to make them more engaging.
   </Card>
-
   <Card title="Add Custom Components" icon="puzzle-piece" href="/essentials/reusable-snippets">
     Add templates to your docs to make them more reusable.
   </Card>
