--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,23 +15,30 @@ description: "Welcome to the brewery!"
   alt="Hero Dark"
 />
 
-## Setting up
+## What is BrewIt?
 
-The first step to world-class documentation is setting up your editing environments.
+Brewit is the ultimate crypto account to kickstart your journey into the world of digital assets. Think of it as your friendly barista — guiding you through your investments, securing your assets, and serving up smooth experiences.\
+\
+Think of it as your friendly barista — guiding you through your investments, securing your assets, and serving up smooth experiences while you enjoy your perfect brew.
+
+## Explore the perfect blend
 
 <CardGroup cols="2">
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
+  <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/onboarding">
+    ### Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/transactions">
+    ### Sending and swapping assets couldn't get easier
   </Card>
-  <Card title="Onboarding" icon="sparkles" href="/quickstart">
-    
+  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/security">
+    ### Your Brewit account is built on a rock-solid Safe smart account
+  </Card>
+  <Card title="Smart Accounts Management" icon="user-alien" iconType="solid" href="/accounts">
+    Organize accounts your way
   </Card>
 </CardGroup>
 
-## Make it yours
+## Explore the tech
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
