Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -24,7 +24,7 @@ Think of it as your friendly barista — guiding you through your investments, s
 ## Explore the perfect blend
 
 <CardGroup cols="2">
-  <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/onboarding">
+  <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/users/onboarding">
     ### Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
   <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/transactions">
