Documentation edits made through Mintlify web editor

--- a/users/accounts.mdx
+++ b/users/accounts.mdx
@@ -1,15 +1,40 @@
 ---
-title: "Built-In Security"
-description: "Powered by battle-tested Safe smart accounts"
+title: "Accounts Management"
+description: "Organize multiple accounts however you like"
 ---
 
-Your Brewit account is secured by a rock-solid Safe smart account — trusted across the crypto ecosystem.
+Create separate accounts for different goals, or set up accounts for friends and family — all by granting permissioned access from your main Brewit account.
 
-Looking for even more protection? Easily upgrade to a multisig setup, just like the ones used by top industry players.
+### Supported Account Types
 
-### Progressive Security for Your Account
+Brewit lets you set up permissioned accounts tailored to different use cases. Here are the supported types:
 
-1. Every Brewit user starts with a secure Safe smart account.
-2. Perform all actions in Brewit with seamless, user-friendly authentication flows.
-3. When you're ready, enable multifactor authentication for added protection.
-4. Upgrade to a Safe multisig setup to boost security and unlock compatibility with Safe{Wallet}.
+1. **Full Access (Sudo)**
+   - Grant full access to specific tokens on each chain.
+   - Choose between *swap* or *spend* permissions — with no limits — per token.
+   - Brewit displays all tokens with a balance for easy selection.
+
+2. **Limited Access**
+   - Set spending limits on a per-token basis.  
+     _Example: Allow 5 USDC out of 100 USDC from your main account._
+
+---
+
+### Supported Authentication Methods
+
+Choose from a range of authentication options depending on your needs. Brewit currently supports:
+
+- **Email Address**
+  - Add and verify an email to grant access — even to new users.  
+    _Ideal for onboarding friends or family._
+
+- **Passkey**
+  - Use an existing or new passkey stored on your phone.  
+    _Great for managing your main account with permissioned access across devices._
+
+- **Existing Brewit User**
+  - Grant access to any existing Brewit user by entering their address or scanning their QR code.
+
+---
+
+Once an account is created, you can **track**, **edit**, or **remove** it from your main account — and access it anytime using the chosen authentication method.
