--- a/introduction.mdx
+++ b/introduction.mdx
@@ -27,13 +27,13 @@ Think of it as your friendly barista — guiding you through your investments, s
   <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/users/onboarding">
     ### Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-  <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/transactions">
+  <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/users/transactions">
     ### Sending and swapping assets couldn't get easier
   </Card>
-  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/security">
+  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/users/security">
     ### Your Brewit account is built on a rock-solid Safe smart account
   </Card>
-  <Card title="Smart Accounts Management" icon="user-alien" iconType="solid" href="/accounts">
+  <Card title="Smart Accounts Management" icon="user-alien" iconType="duotone" href="/users/accounts">
     Organize accounts your way
   </Card>
 </CardGroup>
