refactor: update documentation structure and content for onboarding, transactions, and security sections

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,13 +5,13 @@ description: "Welcome to the brewery!"
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
+  src="/images/hero.png"
   alt="Hero Light"
 />
 
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/hero.png"
   alt="Hero Dark"
 />
 
@@ -41,6 +41,21 @@ Think of it as your friendly barista — guiding you through your investments, s
 ## Explore the tech
 
 Update your docs to your brand and add valuable content for the best user conversion.
+
+<CardGroup cols="2">
+  <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/users/onboarding">
+    ### Get started in seconds iwth social logins, emails or your passkey logins
+  </Card>
+  <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/users/transactions">
+    ### Sending and swapping assets couldn't get easier
+  </Card>
+  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/users/security">
+    ### Your Brewit account is built on a rock-solid Safe smart account
+  </Card>
+  <Card title="Smart Accounts Management" icon="user-alien" iconType="duotone" href="/users/accounts">
+    Organize accounts your way
+  </Card>
+</CardGroup>
 
 <CardGroup cols="2">
   <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
