--- a/users/onboarding.mdx
+++ b/users/onboarding.mdx
@@ -3,6 +3,11 @@ title: "Onboarding"
 description: "Start your crypto adventure in seconds."
 ---
 
+<img
+  src="/images/onboarding.png"
+  alt="Onboarding"
+/>
+
 ## Get started in seconds
 
 Sign up with social logins, email, or even a passkey on your phone — no complex setup, just tap and go.
