--- a/users/security.mdx
+++ b/users/security.mdx
@@ -3,6 +3,11 @@ title: "Built-In Security"
 description: "Powered by battle-tested Safe smart accounts"
 ---
 
+<img
+  src="/images/security.png"
+  alt="Security"
+/>
+
 Your Brewit account is secured by a rock-solid Safe smart account — trusted across the crypto ecosystem.
 
 Looking for even more protection? Easily upgrade to a multisig setup, just like the ones used by top industry players.
