--- a/users/transactions.mdx
+++ b/users/transactions.mdx
@@ -3,6 +3,10 @@ title: "Swift Transactions"
 description: "Send and swap assets effortlessly"
 ---
 
+<img
+  src="/images/transactions.png"
+  alt="Transactions"
+/>
 
 Swap and send assets to your friends or contacts with lightning speed — without worrying about gas fees. It's crypto, made effortless.
 
