feat: enhance user and technology documentation with new sections and images, including accounts, transactions, and security

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -24,50 +24,17 @@ Think of it as your friendly barista — guiding you through your investments, s
 ## Explore the perfect blend
 
 <CardGroup cols="2">
-  <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/users/onboarding">
-    ### Get started in seconds iwth social logins, emails or your passkey logins
+  <Card title="User Documentation" icon="user-group" iconType="duotone" href="/users/introduction">
+    Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-  <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/users/transactions">
-    ### Sending and swapping assets couldn't get easier
+    <Card title="Technology Documentation" icon="screwdriver-wrench" iconType="duotone" href="/technology/introduction">
+    Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/users/security">
-    ### Your Brewit account is built on a rock-solid Safe smart account
+    <Card title="Brewit API" icon="plug-circle-bolt" iconType="duotone">
+    Integrate Brewit Services into your app with our API (Soon!)
   </Card>
-  <Card title="Smart Accounts Management" icon="user-alien" iconType="duotone" href="/users/accounts">
-    Organize accounts your way
-  </Card>
-</CardGroup>
-
-## Explore the tech
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols="2">
-  <Card title="Onboarding" icon="sparkles" iconType="duotone" href="/users/onboarding">
-    ### Get started in seconds iwth social logins, emails or your passkey logins
-  </Card>
-  <Card title="Swift Transactions" icon="arrow-down-arrow-up" iconType="duotone" href="/users/transactions">
-    ### Sending and swapping assets couldn't get easier
-  </Card>
-  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/users/security">
-    ### Your Brewit account is built on a rock-solid Safe smart account
-  </Card>
-  <Card title="Smart Accounts Management" icon="user-alien" iconType="duotone" href="/users/accounts">
-    Organize accounts your way
+    <Card title="Brewit SDK" icon="code" iconType="duotone">
+    Integrate Brewit Account into your app with our SDK (Soon!)
   </Card>
 </CardGroup>
 
-<CardGroup cols="2">
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
