--- a/technology/subaccounts.mdx
+++ b/technology/subaccounts.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Accounts Management"
+title: "Sub-Accounts"
 description: "Organize multiple accounts however you like"
-icon: "user-group"
 ---
 
 Create separate accounts for different goals, or set up accounts for friends and family — all by granting permissioned access from your main Brewit account.
