--- a/users/onboarding.mdx
+++ b/users/onboarding.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Onboarding"
+title: "One-click Onboarding"
 description: "Start your crypto adventure in seconds."
+icon: "hand-pointer"
 ---
 
 <img
