--- a/users/security.mdx
+++ b/users/security.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Built-In Security"
 description: "Powered by battle-tested Safe smart accounts"
+icon: "shield-check"
+
 ---
 
 <img
@@ -18,3 +20,22 @@ Looking for even more protection? Easily upgrade to a multisig setup, just like 
 2. Perform all actions in Brewit with seamless, user-friendly authentication flows.
 3. When you're ready, enable multifactor authentication for added protection.
 4. Upgrade to a Safe multisig setup to boost security and unlock compatibility with Safe{Wallet}.
+
+
+### Configure Safe Account
+Your Safe account can be configured to use a different owner as signer. On Brewit, this can be done by clicking on the "Security" tab and then configuring the signers and signer threshold.
+
+
+### Exit Brewit
+Moving from one crypto wallet to another? You can exit Brewit by clicking on the "Exit Brewit" under the "Security" tab and selecting the new crypto wallet you want to transfer all your assets to.
+Currently, you need to do this for each network you are using Brewit on.
+
+
+### Multifactor Authentication
+
+Coming soon!
+
+### Account Recovery
+
+Coming soon!
+
