--- a/users/accounts.mdx
+++ b/users/accounts.mdx
@@ -4,7 +4,13 @@ description: "Organize multiple accounts however you like"
 icon: "user-group"
 ---
 
+<img
+  src="/images/accounts.png"
+  alt="Accounts"
+/>
+
 Create separate accounts for different goals, or set up accounts for friends and family — all by granting permissioned access from your main Brewit account.
+
 
 ### Supported Account Types
 
