feat: enhance user documentation with new steps and video content for accounts, onboarding, security, and transactions sections

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -24,10 +24,10 @@ Think of it as your friendly barista — guiding you through your investments, s
 ## Explore the perfect blend
 
 <CardGroup cols="2">
-  <Card title="User Documentation" icon="user-group" iconType="duotone" href="/users/introduction">
+  <Card title="User Documentation" icon="user-group" iconType="duotone" href="/users/overview">
     Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-    <Card title="Technology Documentation" icon="screwdriver-wrench" iconType="duotone" href="/technology/introduction">
+    <Card title="Technology Documentation" icon="screwdriver-wrench" iconType="duotone" href="/technology/overview">
     Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
     <Card title="Brewit API" icon="plug-circle-bolt" iconType="duotone">
@@ -37,4 +37,3 @@ Think of it as your friendly barista — guiding you through your investments, s
     Integrate Brewit Account into your app with our SDK (Soon!)
   </Card>
 </CardGroup>
-
