--- a/users/accounts.mdx
+++ b/users/accounts.mdx
@@ -11,6 +11,40 @@ icon: "user-group"
 
 Create separate accounts for different goals, or set up accounts for friends and family — all by granting permissioned access from your main Brewit account.
 
+<Steps>
+  <Step title="Select the account type">
+    <p>
+      Select the account type you want to create. Currently we support full access and limited access accounts.
+    </p>
+  </Step>
+  <Step title="Select the tokens you want to grant permissioned access to">
+    <p>
+      Select the tokens you want to grant permissioned access to.
+    </p>
+  </Step>
+  <Step title="Select the spending limit">
+    <p>
+      Select the spending limit for the new account in case of limited access account.
+    </p>
+  </Step>
+  <Step title="Select the authentication method">
+    <p>
+      Select the authentication method you want to use to access the new account.
+    </p>
+  </Step>
+</Steps>
+
+
+<div className="relative aspect-video rounded-xl overflow-hidden my-8">
+  <iframe 
+    width="100%" 
+    height="100%" 
+    src="https://assets.brewit.money/flow/4.mp4"
+    frameBorder="0" 
+    allowFullScreen
+    className="absolute inset-0"
+  ></iframe>
+</div>
 
 ### Supported Account Types
 
