--- a/users/onboarding.mdx
+++ b/users/onboarding.mdx
@@ -9,9 +9,35 @@ icon: "hand-pointer"
   alt="Onboarding"
 />
 
+
+
 ## Get started in seconds
 
 Sign up with social logins, email, or even a passkey on your phone — no complex setup, just tap and go.
+
+<Steps>
+  <Step title="Login/ Signup">
+    <p>
+      Login with your existing email address, social media accounts or a passkey on your phone.
+    </p>
+  </Step>
+  <Step title="Access on any device">
+    <p>
+      Access your account from any device with the same login credentials.
+    </p>
+  </Step>
+</Steps>
+
+<div className="relative aspect-video rounded-xl overflow-hidden my-8">
+  <iframe 
+    width="100%" 
+    height="100%" 
+    src="https://assets.brewit.money/flow/1.mp4"
+    frameBorder="0" 
+    allowFullScreen
+    className="absolute inset-0"
+  ></iframe>
+</div>
 
 ### Supported login mechanisms:
 
@@ -19,3 +45,4 @@ Sign up with social logins, email, or even a passkey on your phone — no comple
 2. Signing using your Google, Twitter or Fascaster accounts
 3. Use your phone or devices passkey using either fingerpring or face id scan
 4. Use any of your exising wallets if you are familiar with such as MetaMask Rabby (Use this if you are sure your crypto wallets are secure)
+
