--- a/users/security.mdx
+++ b/users/security.mdx
@@ -14,6 +14,35 @@ Your Brewit account is secured by a rock-solid Safe smart account — trusted ac
 
 Looking for even more protection? Easily upgrade to a multisig setup, just like the ones used by top industry players.
 
+<Steps>
+  <Step title="Add new signers for your Safe Multisig">
+    <p>
+      Add new signers for your Safe Multisig to use a different owner as signer.
+    </p>
+  </Step>
+  <Step title="Update the signer threshold">
+    <p>
+      Update the signer threshold for your Safe to make it either single signer or multisig account.
+    </p>
+  </Step>
+</Steps>
+
+
+<div className="relative aspect-video rounded-xl overflow-hidden my-8">
+  <iframe 
+    width="100%" 
+    height="100%" 
+    src="https://assets.brewit.money/flow/3.mp4"
+    frameBorder="0" 
+    allowFullScreen
+    className="absolute inset-0"
+  ></iframe>
+</div>
+
+<Note>
+  The configuration will be applied to the current network you are using Brewit on.
+</Note>
+
 ### Progressive Security for Your Account
 
 1. Every Brewit user starts with a secure Safe smart account.
