--- a/users/transactions.mdx
+++ b/users/transactions.mdx
@@ -11,6 +11,19 @@ icon: "arrow-right-arrow-left"
 
 Swap and send assets to your friends or contacts with lightning speed — without worrying about gas fees. It's crypto, made effortless.
 
+
+<div className="relative aspect-video rounded-xl overflow-hidden my-8">
+  <iframe 
+    width="100%" 
+    height="100%" 
+    src="https://assets.brewit.money/flow/2.mp4"
+    frameBorder="0" 
+    allowFullScreen
+    className="absolute inset-0"
+  ></iframe>
+</div>
+
+
 ### Highlights
 
 1. Send to your personal contacts, ENS, Base names or any crypto address.
