feat: update security and onboarding documentation with new video content and enhanced descriptions

--- a/technology/security.mdx
+++ b/technology/security.mdx
@@ -12,8 +12,7 @@ Your Brewit account is secured by a rock-solid Safe smart account — trusted ac
 Every Brewit account uses:
 - Safe smart account version 1.4.1
 - Account abstraction functionality via:
-  - ERC-4337 adapter
-  - ERC-7579 adapter
+  - ERC-4337 adapter and ERC-7579 adapter. Brewit uses [Safe7579](https://github.com/rhinestonewtf/safe7579) by Rhinestone to enable ERC-7579 and 4337 functionality.
 
 ## Account Initialization
 
