--- a/users/onboarding.mdx
+++ b/users/onboarding.mdx
@@ -20,15 +20,23 @@ Sign up with social logins, email, or even a passkey on your phone — no comple
     <p>
       Login with your existing email address, social media accounts or a passkey on your phone.
     </p>
+    <div className="relative aspect-video rounded-xl overflow-hidden my-8">
+  <iframe 
+    width="100%" 
+    height="100%" 
+    src="https://assets.brewit.money/flow/5.mp4"
+    frameBorder="0" 
+    allowFullScreen
+    className="absolute inset-0"
+  ></iframe>
+</div>
+
   </Step>
   <Step title="Access on any device">
     <p>
-      Access your account from any device with the same login credentials.
+      Access your account from any device with the same login credentials whether you are on desktop, mobile or tablet.
     </p>
-  </Step>
-</Steps>
-
-<div className="relative aspect-video rounded-xl overflow-hidden my-8">
+    <div className="relative aspect-video rounded-xl overflow-hidden my-8">
   <iframe 
     width="100%" 
     height="100%" 
@@ -38,6 +46,12 @@ Sign up with social logins, email, or even a passkey on your phone — no comple
     className="absolute inset-0"
   ></iframe>
 </div>
+
+  </Step>
+  
+</Steps>
+
+
 
 ### Supported login mechanisms:
 
