feat: adds brewit.js usage and deployment updates

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -17,23 +17,27 @@ description: "Welcome to the brewery!"
 
 ## What is BrewIt?
 
-Brewit is the ultimate crypto account to kickstart your journey into the world of digital assets. Think of it as your friendly barista — guiding you through your investments, securing your assets, and serving up smooth experiences.\
-\
+Brewit is the ultimate crypto account to kickstart your journey into the world of digital assets.
+Powered by the industry-leading [Safe](https://safe.global/) smart accounts and seamlessly integrated with Account Abstraction ERC-4337 infrastructure through robust ERC-7579 implementations, Brewit makes managing your crypto simple, secure, and flexible.
+
+With Brewit Accounts, you can easily delegate access, automate actions, and unlock powerful features using our intuitive Delegation SDK. We handle the technical complexities, so you can focus on what matters—whether you're exploring as a user or building innovative integrations as a developer.
+
 Think of it as your friendly barista — guiding you through your investments, securing your assets, and serving up smooth experiences while you enjoy your perfect brew.
 
 ## Explore the perfect blend
 
 <CardGroup cols="2">
-  <Card title="User Documentation" icon="user-group" iconType="duotone" href="/users/overview">
+  <Card title="Application" icon="user-group" iconType="duotone" href="/users/overview">
     Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-    <Card title="Technology Documentation" icon="screwdriver-wrench" iconType="duotone" href="/technology/overview">
+    <Card title="Technology" icon="screwdriver-wrench" iconType="duotone" href="/technology/overview">
     Get started in seconds iwth social logins, emails or your passkey logins
+  </Card>
+      <Card title="Build" icon="code" iconType="duotone"  href="/build/overview">
+    Integrate Brewit Account into your app with our SDK (Soon!)
   </Card>
     <Card title="Brewit API" icon="plug-circle-bolt" iconType="duotone">
     Integrate Brewit Services into your app with our API (Soon!)
   </Card>
-    <Card title="Brewit SDK" icon="code" iconType="duotone">
-    Integrate Brewit Account into your app with our SDK (Soon!)
-  </Card>
+
 </CardGroup>
