--- a/technology/delegated-accounts.mdx
+++ b/technology/delegated-accounts.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Sub-Accounts"
+title: "Delegated Accounts"
 description: "Organize multiple accounts however you like"
 ---
 
 Create separate accounts for different goals, or set up accounts for friends and family — all by granting permissioned access from your main Brewit account.
 
-## Subaccounts implementation
+## Delegated Account implementation
 
-Brewit uses a flexible session key implementation ([Smart Sessions](https://github.com/erc7579/smartsessions)) to allow users to create subaccounts.
+Brewit uses a flexible session key implementation ([Smart Sessions](https://github.com/erc7579/smartsessions)) to allow users to create delegated account.
 
 <Note>
 Smart Sessions is authored by [Biconomy](https://www.biconomy.io) and [Rhinestone](https://www.rhinestone.wtf) team.
@@ -15,7 +15,7 @@ It is a flexible session management validator implementation for smart accounts,
 Read more about it [here](https://github.com/erc7579/smartsessions/wiki/Smart-Sessions).
 </Note>
 
-Here is how we create and manage subaccounts using Smart Sessions:
+Here is how we create and manage delegated accounts using Smart Sessions:
 
 <Steps>
   <Step title="Select a policy and conditions">
