--- a/technology/deployments.mdx
+++ b/technology/deployments.mdx
@@ -13,7 +13,7 @@ description: "Contract deployments for Brewit"
 | Safe7579 Launchpad | [0x7579011aB74c46090561ea277Ba79D510c6C00ff](https://contractscan.xyz/contract/0x7579011aB74c46090561ea277Ba79D510c6C00ff) | [Rhinestone](https://www.rhinestone.wtf) |
 | Module Registry | [0x000000000069E2a187AEFFb852bF3cCdC95151B2](https://contractscan.xyz/contract/0x000000000069E2a187AEFFb852bF3cCdC95151B2) | [Rhinestone](https://www.rhinestone.wtf)    |
 | Rhinestone Attester | [0x000000333034E9f539ce08819E12c1b8Cb29084d](https://contractscan.xyz/contract/0x000000333034E9f539ce08819E12c1b8Cb29084d) | [Rhinestone](https://www.rhinestone.wtf) |
-| ZenGuard Attestor | [0xC9e29745a752B551a7FCD19Afe50EcCEf5fd7d02](https://contractscan.xyz/contract/0xC9e29745a752B551a7FCD19Afe50EcCEf5fd7d02) | [ZenGuard](https://www.zenguard.xyz) |
+| Brewit Attestor | [0xC9e29745a752B551a7FCD19Afe50EcCEf5fd7d02](https://contractscan.xyz/contract/0xC9e29745a752B551a7FCD19Afe50EcCEf5fd7d02) | [Brewit](https://www.brewit.money) |
 
 ### Modules
 | Contracts | Address | Deployed By |
@@ -40,12 +40,28 @@ description: "Contract deployments for Brewit"
 Brewit is currently deployed on the following chains:
 
 ### Mainnet Networks
+- Ethereum Mainnet
 - Arbitrum One
 - BNB Smart Chain
 - Base
+- Gnosis Chain
 - Optimism
 - Polygon PoS
+
 
 ### Test Networks
 - Base Sepolia
 - Ethereum Sepolia
+
+
+### Suppoting Soon
+- World Chain
+- Unichain
+- Soneium
+- Avalanche
+- Celo
+- Linea
+- Berachain
+
+> **Note:** If you need support for any other/ custom chain, please [reach out to us](https://t.me/brewitmoney/24)!
+
