--- a/technology/overview.mdx
+++ b/technology/overview.mdx
@@ -11,7 +11,8 @@ description: "Welcome to the roaster!"
 
 ## Explore the tech
 
-Update your docs to your brand and add valuable content for the best user conversion.
+
+
 
 <CardGroup cols="2">
   <Card title="User Accounts" icon="user" iconType="duotone" href="/technology/accounts">
@@ -23,7 +24,7 @@ Update your docs to your brand and add valuable content for the best user conver
   <Card title="Security" icon="shield-check" iconType="duotone" href="/technology/security">
     Your Brewit account is built on a rock-solid Safe smart account
   </Card>
-  <Card title="Sub Accounts" icon="user-group" iconType="duotone" href="/technology/subaccounts">
-    Leaern about sub accounts
+  <Card title="Delegated Accounts" icon="user-group" iconType="duotone" href="/technology/delegated-accounts">
+    Learn about delegated accounts
   </Card>
 </CardGroup>
