feat: update deployments documentation to include new supported chains and test networks

--- a/technology/deployments.mdx
+++ b/technology/deployments.mdx
@@ -47,6 +47,12 @@ Brewit is currently deployed on the following chains:
 - Gnosis Chain
 - Optimism
 - Polygon PoS
+- Scroll
+- Celo
+- Avalanche
+- World Chain
+- Unichain
+- Sonic
 
 
 ### Test Networks
@@ -55,13 +61,20 @@ Brewit is currently deployed on the following chains:
 
 
 ### Suppoting Soon
-- World Chain
-- Unichain
+
 - Soneium
-- Avalanche
-- Celo
 - Linea
 - Berachain
+- Zksync
+- Mantle
+- Zora
+- OP BNB
+- Blast
+- Sei
+- Mode
+- HyperEVM
+- Katana
+
 
 > **Note:** If you need support for any other/ custom chain, please [reach out to us](https://t.me/brewitmoney/24)!
 
