feat: add Monad Testnet to deployments documentation under Test Networks

--- a/technology/deployments.mdx
+++ b/technology/deployments.mdx
@@ -58,6 +58,7 @@ Brewit is currently deployed on the following chains:
 ### Test Networks
 - Base Sepolia
 - Ethereum Sepolia
+- Monad Testnet
 
 
 ### Suppoting Soon
