fix: update image references and paths in introduction and overview documentation

--- a/app/overview.mdx
+++ b/app/overview.mdx
@@ -4,23 +4,23 @@ description: "Welcome to the cafe!"
 ---
 
 <img
-  src="/images/user.png"
+  src="/images/hero.png"
   alt="Hero Light"
 />
 
 ## Explore the perfect blend
 
 <CardGroup cols="2">
-  <Card title="One-click Onboarding" icon="hand-pointer" iconType="duotone" href="/users/onboarding">
+  <Card title="One-click Onboarding" icon="hand-pointer" iconType="duotone" href="/app/onboarding">
     Get started in seconds iwth social logins, emails or your passkey logins
   </Card>
-  <Card title="Swift Transactions" icon="arrow-right-arrow-left" iconType="duotone" href="/users/transactions">
+  <Card title="Swift Transactions" icon="arrow-right-arrow-left" iconType="duotone" href="/app/transactions">
     Sending and swapping assets couldn't get easier
   </Card>
-  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/users/security">
+  <Card title="Built In Security" icon="shield-check" iconType="duotone" href="/app/security">
     Your Brewit account is built on a rock-solid Safe smart account
   </Card>
-  <Card title="Smart Accounts Management" icon="user-group" iconType="duotone" href="/users/accounts">
+  <Card title="Smart Accounts Management" icon="user-group" iconType="duotone" href="/app/accounts">
     Organize accounts your way
   </Card>
 </CardGroup>
