--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,13 +5,13 @@ description: "Welcome to the brewery!"
 
 <img
   className="block dark:hidden"
-  src="/images/hero.png"
+  src="/images/main-hero.png"
   alt="Hero Light"
 />
 
 <img
   className="hidden dark:block"
-  src="/images/hero.png"
+  src="/images/main-hero.png"
   alt="Hero Dark"
 />
 
